--- a/index.html
+++ b/index.html
@@ -6,122 +6,333 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="font-family: Verdana, Geneva, Tahoma, sans-serif;" >
+
+  <!-- Etiket Konusu -->
+
+  <h1>Hello World</h1>
+  <h6>Selam</h6>
+  <p>merhaba</p>
+  <br>
+  <p style="color:blueviolet ;">Nasılsın</p>
+  <hr style="width:100%; height: 5px;">
+  <p>Einstein der ki<em>günde 3 litre su için</em> cidden.</p>
+  <p>Ben tırı sürüyordum <del>o da vinci</del></p>
+  <blockquote cite="vikipedia">referans alıyor</blockquote>
+  <a href="https://github.com/">GitHub</a> <br><br>
+  <a href="https://github.com/hilalertenay" target="_blank">Hesabıma Linkten Ulaşabilirsiniz!</a>
+  <br><br>
+  <img width= "30%" height="30%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwy4uN0GIFMpEsc6WKLYi64nLaS3Xxsrw3TvLswZeLoA7sS9avqYvpKuscDtx07Ajyayc&usqp=CAU "  alt="kedi">
+
+
+  <!-- Etiket Konusu -->
+
+  <h1>Kurum Adı</h1>
+  <p>Neos Akademi</p>
+  <h2>Eğitmen Adı</h2>
+  <p>Başak Hilal Ertenay</p>
+  <h3>Çalıştığı Alan</h3>
+  <p>Front-End Developer</p>
+  <h4>Kurum Konumu</h4>
+  <p>Bakırköy/İstanbul</p>
+  <h5>Saat</h5>
+  <p>10:30</p>
+  <h6>Yıl</h6>
+  <p>2022</p>
+
+
+  <!-- Liste Tagleri  -->
+
+  <ul>
+    Sırasız Liste
+    <li>
+      Selam
+    </li>
+    <li>
+      Merhaba
+    </li>
+    <li>
+      Falan
+    </li>
+    <li>
+      Filan
+    </li>
+  </ul>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <ol type="I">
+    Youtube videosunun çalışması için ;
+    <li>youtube linkinin www.youtube şeklinde olması lazım </li>
+    <li>.com ve link arasına /embed/ eklememiz lazım..</li>
+  </ol>
+
+
+
+  <iframe width="520" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+
+  <ol>
+    Sıralı Liste
+    <li>
+      Selam   
+    </li>
+    <li>
+      Merhaba
+    </li>
+    <li>
+      Falan
+    </li>
+    <li>
+      Filan
+    </li>
+  </ol>
+
+
+<br><br><br><br>
+
+<ol>
+  <li>Çorbalar</li>
+  <ol>
+   <li>
+       Ezogelin.....5tl
+       </li>
+       <li>
+           Mercimek.....20tl
+       </li>
+       <li>
+           Tavuk Suyu.....15tl
+       </li>
+       <li>
+           Paca.....15tl
+       </li>
+  </ol>
+
+</ol>
+
+<ol>
+   <li>Yemekler</li>
+
+   <ol>
+       <li>Sebzeler</li>
+       <ol>
+           <li>
+               Ispanak.....17tl
+           </li>
+           <li>
+               Karnabahar.....15tl
+           </li>
+       </ol>
+      
+   </ol>
+   <ol>
+       <li>Etliler</li>
+       <ol>
+           <li>
+               Karnıyarık.....16tl
+           </li>
+           <li>
+               Alinazik.....20tl
+           </li>
+           <li>
+               Pideli Köfte.....15tl
+           </li>
+       </ol>
+
+   </ol>
+   <ol>
+       <li>Tatlılar</li>
+       <ol>
+           A.Sütlü Tatlılar
+           <li>
+               Sütlaç.....17tl
+           </li>
+           <li>
+               Güllaç.....20tl
+           </li>
+       </ol>
+       <ol>
+           B.Şerbetli Tatlılar
+           <li>
+               Baklava.....20tl
+           </li>
+           <li>
+               Kadayıf.....18tl
+           </li>
+           <li>
+               Lokma.....12tl
+           </li>
+       </ol>
+   </ol>
+   
+</ol>
 
 
 
 
-  <h1> Kurum Adı: </h1>
-  <h6> Neos Yazılım </h6>
-  <hr>
-  <h2> Öğrenci Adı: </h2>
-  <h6> Başak Hilal Ertenay </h6>
-  <hr>
-  <h4> Çalıştığı Alan: </h4>
-  <h5> Bilgi İşlem </h5>
-  <hr>
-  <h3> Kurum Konumu: </h3>
-  <h4> Bakırköy İstanbul </h4>
-  <hr>
-  <h5> Saat: </h5>
-  <h4> 18.37 </h4>
-
-
-  <blockquote cite="vikipedia"> referans alıyor </blockquote>
-  <a href="https://neosyazilim.com/ Neos Yazılım "></a>
-  <a style="font-family: ;verdana;" href="https://neosyazilim.com/" target="_blank">Hilal</a>
-  <img src=" https://www.ens.az/images/news/a1b4bd20b46c1ac34717a9bcdb9d6981.jpg" alt="kedi">
-
-<!-- Liste Tagleri-input-div 11.09.22 -->
-<ul>
-  Sırasız Liste 
-<li>
-  selam
-</li>
-  merhaba
-  <li>
-</ul>
-
-
-
-<form>
-<br>
-<br>
-<br>
-<br>
-<br>
-<form>
-  <h1>İsim:</h1>
+<h2>İsim:</h2>
   <input type="text" name="" id="" placeholder="Adınızı Giriniz!" >
   <br>
-  <h1>Soyisim:</h1>
+  <h2>Soyisim:</h2>
   <input type="text" name="" id="" placeholder="Soyadınızı Giriniz!" >
   <br>
-  <h1> Tel:</h1>
+  <h2> Tel:</h2>
   <input type="text" name="" id="" placeholder="+90 *** *** ** **">
   <br>
-  <h1>Email:</h1>
+  <h2>Email:</h2>
   <input type="text" name="" id="" placeholder="example@gmail.com">
   <br>
-  <h1>Kullanıcı Adı:</h1>
+  <h2>Kullanıcı Adı:</h2>
   <input type="text">
   <br>
-  <h1>Şifre:</h1>
+  <h2>Şifre:</h2>
   <input type="text">
   <br>
-  <h1>Şifre Tekrar:</h1>
+  <h2>Şifre Tekrar:</h2>
   <input type="text">
   <br>
-  <h1>Ülke:</h1>
-  <select name="dropdown" id="select">>
-      <option value=""></option>
-      <option value="Türkiye">Türkiye</option>
-      <option value="Amerika">Amerika</option>
-      <option value="Fransa">Fransa</option>
-<select>
+  <h2>Ülke:</h2>
+ 
+<br>    
+<select name = "dropdown" id="select">
+  <option value=""></option>
+  <option value = "Türkiye">Türkiye</option>
+  <option value = "Java">Suriye</option>
+  <option value = "Discrete Mathematics">Irak</option>
+</select>
 <br>
-
 <p>Meslek</p>
-<input type="checkbox" name="Voleybol" id=""> 
-<input type="checkbox" name="Futbol" id=""> 
-<input type="checkbox" name="Basketbol" id=""> 
+<input type="checkbox" name="tenis" id="">Developer
+<br>
+<input type="checkbox" name="tenis" id="">Teacher
+<br>
+<input type="radio" name="tenis" id="">Ceo
+<br>
+<input type="button" value="Yenile"> 
+<input type="button" value="Sıfırla">          
+
+
+
+<!-- Tablolar&Div -->
+
+<table style="width:50%; text-align: center;">
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
 <br>
 <br>
-<input type="button" value="Yenile">
-<input type="button" value="Sıfırla">
+<br>
+
+  <!-- th, td {
+      border: 1px solid black;
+    }
+    table{
+        border: 10px solid black;
+    } 
+    table = ana element
+    tr = yeni bir satır açar
+    td = satırın içindeki yazılar (hücre)
+    th = satır başlığı
+      <colgroup> (sütunu düzenler)
+  <col span="2" style="background-color:red">
+  <col style="background-color:yellow">
+</colgroup>
+    -->
+
+ <table style="text-align:center;">
+<tr>
+    <th>1. sutun 1. satır</th>
+    <th>2. sutun 1. satır</th>
+    <th>3. sutun 1. satır</th>
+    <th>4. sütun 1. satır</th>
+    <th rowspan="3">5. sütun</th>
+  </tr>
+  <tr>
+    <td>1. sütun 2. satır</td>
+    <td>2. sütun 2. satır</td>
+    <td>3. sütun 2. satır</td>
+    <td rowspan="2">4. sütun 2. satır</td>
+      </tr>
+      <tr>
+         <td>1. sütun 3. satır</td>
+         <td>2. sütun 3. satır</td>
+         <td>3. sütun 3. satır</td>
+      </tr>
+       </table>
+     <!-- th, td {
+             border: 1px solid black;
+           }
+           table{
+               border: 10px solid black;
+           } -->
+
+<!-- <table>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+    <th>Savings for holiday!</th>
+  </tr>
+  <tr>
+    <td>January</td>
+    <td>$100</td>
+    <td rowspan="2">$50</td>
+  </tr>
+  <tr>
+    <td>February</td>
+    <td>$80</td>
+  </tr>
+</table> -->
+<br>
+<br>
+<br>
+<div id="div0">
+  <h1>1. div</h1>
+  <h6>Selam</h6>
+  <p>Merhaba</p>
+</div>
+<div id="div1">
+  <h1>2. div</h1>
+  <p>asdfsadf</p>
+  <table></table>
+</div>
 
 
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</form>
-
-
-
-
-
-
+<div id="div2" >
+  <h1>3. div</h1>
+</div>
 
 
 </body>
 
 <footer>
 
-</footer>
 
-<html>
+</html>    
+
+
+
+   
